# metrix

./: CMakeLists.txt  main.cc  plugins.cfg
media/: .gitignore  common.material  ship.mesh
